--- a/index.html
+++ b/index.html
@@ -1,19 +1,44 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width,
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width,
           user-scalable=no,
           initial-scale=1.0,
           maximum-scale=1.0,
           minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-
-<script type="text/javascript" src="./main.js"></script>
-</body>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic-ext,greek-ext" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://meyerweb.com/eric/tools/css/reset/reset.css" />
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+    <div class="card" data-qa="card">
+      <img src="images/imac.jpeg" alt="Mac Photo" class="mac-photo">
+      <div class="content-box">
+        <h2 class="headline">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h2>
+        <p class="second-headline">Код товара: 195434</p>
+        <div class="rate-and-feedback">
+          <div class="star-block">
+            <div class="star"><img src="images/star-active.svg" alt="star photo"></div>
+            <div class="star"><img src="images/star-active.svg" alt="star photo"></div>
+            <div class="star"><img src="images/star-active.svg" alt="star photo"></div>
+            <div class="star"><img src="images/star-active.svg" alt="star photo"></div>
+            <div class="star"><img src="images/star.svg" alt="star photo"></div>
+      </div>
+          <p class="feedback">Отзывов: 5 </p>
+        </div>
+        <div class="price">
+          <p class="price-text">Цена:</p>
+          <p class="price-amount">69 999 грн</p>
+        </div>
+        <div>
+          <a href="#"  data-qa="hover" class="text-in-button">купить</a>
+      </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="./main.js"></script>
+  </body>
 </html>
